fixed horizontal scrollies from intro bar

--- a/docs/static/css/index.css
+++ b/docs/static/css/index.css
@@ -92,7 +92,8 @@ a {
     background-position: center;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
     position: relative;
-    padding: 5rem 0; }
+    padding: 5rem 0;
+    overflow: hidden; }
     .intro-bar--horizontal:before {
       z-index: 0;
       opacity: .5; }
