--- a/static/scss/intro-bar.scss
+++ b/static/scss/intro-bar.scss
@@ -70,6 +70,7 @@
     box-shadow: 0 5px 5px rgba(0, 0, 0, .25);
     position: relative;
     padding: 5rem 0;
+    overflow: hidden;
 
     &:before {
       z-index: 0;
